Fixing docs